# autostream

./: .gitignore  Dockerfile  README-en.md  README.md  pyproject.toml
autostream/: cli.py
autostream/controller/: bili_controller.py  config_controller.py
autostream/execute/: scan_and_execute.py
autostream/model/: model.py
autostream/tests/: test_execute.py
looplive/: cli.py  main.py
looplive/controller/: bili_controller.py  config_controller.py  ytb_controller.py
looplive/execute/: scan_and_execute.py
looplive/model/: config.json  model.py
looplive/tests/: test_execute.py
