[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looplive"
version = "0.0.2"
authors = [
  { name="timerring"},
]
description = "The Python toolkit package and cli designed for auto loop live."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
looplive = "looplive.cli:cli"

[project.urls]
"Homepage" = "https://github.com/timerring/looplive"
